# Local_Computer_Speech

./: .gitignore  CMakeLists.txt  README.md  run.ps1
backend/: requirements.txt
backend/local_computer_speech_backend/: __init__.py  cli.py  path_resolver.py  runtime_profile.py  synth_profiles.py
backend/tests/: test_cli_synth_dtype.py  test_runtime_profile.py
docs/: ARCHITECTURE.md  RUNTIME_PATHS.md
scripts/: build_app.ps1  common.ps1  healthcheck_backend.ps1  install_qwen3_tts_model.ps1  qt_detection.ps1  setup_backend_env.ps1
src/: main.cpp
src/app/: Application.cpp  Application.h
src/core/: BackendBridge.cpp  BackendBridge.h  PathResolver.cpp  PathResolver.h  SoxInstaller.cpp  SoxInstaller.h
src/ui/: MainWindow.cpp  MainWindow.h  TrayController.cpp  TrayController.h
tests/: TestBackendBridge.cpp  TestSoxInstaller.cpp
